--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
 	<title>la page a rosita</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
 <h1>Je suis rosita </h1>
 <h2>Bob est ici lui aussi</h2>
+<h3>polo nous a rejoint</h3>
 </body>
 </html>
 
