--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-<h1>Je suis rosita </h1>
-<h2>Bob est ici lui aussi</h2>
-<h3>polo nous a rejoint</h3>
+<a href="#"><h1>Je suis rosita </h1></a>
+<a href="#"><h2>Bob est ici lui aussi</h2></a>
+<a href="#"><h3>polo nous a rejoint</h3></a>
 </body>
 </html>
 
