--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <a href="#"><h1>Je suis rosita </h1></a>
 <a href="#"><h2>Bob est ici lui aussi</h2></a>
 <a href="#"><h3>polo nous a rejoint</h3></a>
+<a href="contact.html"><h3>contactez nous</h3></a>
 </body>
 </html>
 
