--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,18 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<header>
+		<nav>
+			<a href="index.html">accueil</a>
+			<a href="contact.html">contact</a>
+		</nav>
+	</header>
 <h1>contactez nous</h1>
 <form>
 	<p>entrez votre email</p>
-	<input type="email" name="mail">
+	<input type="email" name="mail" placeholder="votre email">
 	<p>entrez votre demande</p>
-	<textarea class="col-10"></textarea>
+	<textarea cols="50" rows="30" placeholder="Laissez nous un message -- ;-)"></textarea>
 </form>
 </body>
 </html>
