--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
 </head>
 
 <body>
-<a href="#"><h1>Je suis rosita </h1></a>
-<a href="#"><h2>Bob est ici lui aussi</h2></a>
-<a href="#"><h3>polo nous a rejoint</h3></a>
-<a href="contact.html"><h3>contactez nous</h3></a>
+	<header>
+		<nav>
+			<a href="index.html">accueil</a>
+			<a href="contact.html">contact</a>
+		</nav>
+	</header>
+	<h1>Je suis rosita </h1></a>
+	<h2>Bob est ici lui aussi</h2></a>
+	<h3>polo nous a rejoint</h3></a>
+
 </body>
 </html>
 
