--- a/contact.html
+++ b/contact.html
@@ -13,5 +13,8 @@
 	<p>Entrez votre demande</p>
 	<textarea cols="50" rows="30" placeholder="laissez nous un petit mot ----- ;-)"></textarea>
 </form>
+<footer>
+	
+</footer>
 </body>
 </html>
