--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <a href="#"><h1>Je suis rosita </h1></a>
 <a href="#"><h2>Bob est ici lui aussi</h2></a>
 <a href="#"><h3>polo nous a rejoint</h3></a>
+<footer>
+	
+</footer>
 </body>
 </html>
 
