--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<h2>Bob est ici lui aussi</h2></a>
 	<h3>polo nous a rejoint</h3></a>
 	ok baby
-
+	<img src="img/ou-est-charlie.jpg">
 <footer>
 	
 </footer>
