--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<h1>Je suis rosita </h1></a>
 	<h2>Bob est ici lui aussi</h2></a>
 	<h3>polo nous a rejoint</h3></a>
+	<h3>Tout bègne</h3>
 	ok baby
 	<img src="img/ou-est-charlie.jpg">
 <footer>
